# toylang

./: .clang-format  .gitignore  AST-UML.graphml  CMakeLists.txt  Cargo.toml  Makefile  README.md  grammer.y  lexical.l  source.toy  test.tyl
components/ir/: Cargo.toml
components/ir/src/: branch.rs  calculate.rs  global.rs  lib.rs  store.rs
components/parser/: Cargo.toml
components/risc-v/: Cargo.toml  registers.yaml  test.ir
components/risc-v/src/: ir_wrapper.rs  lib.rs  register.rs
functional_test/: everything.ir  everything.toylang
node/: node.c  node.h
node/expression/: expression.c  expression.h
node/expression/constant/: constant.c  constant.h
node/expression/tempRegister/: tempRegister.c  tempRegister.h
node/expression/tempRegister/binaryOperator/: binaryOperator.c  binaryOperator.h
node/expression/tempRegister/variable/: variable.c  variable.h
node/statement/: statement.h
node/statement/assign/: assign.c  assign.h
node/statement/declare/: declare.c  declare.h
node/statement/if/: if.c  if.h
node/statement/statementList/: statementList.c  statementList.h
node/statement/while/: while.c  while.h
src/: code_parser.rs  ir_parser.rs  main.rs  parser.rs  riscv-backend.rs
src/ast/: function.rs  function_definition.rs  global_definition.rs  mod.rs  node.h  test.toy  type_definition.rs  visitor.rs
src/ast/context/: mod.rs  symbol_table.rs
src/ast/expression/: constant.rs  expression.h  field.rs  function_call.rs  integer_literal.rs  mod.rs  parenthesis.rs  rvalue.rs  struct_literal.rs  variable_ref.rs
src/ast/expression/bin_op/: level3.rs  mod.rs
src/ast/expression/lvalue/: lvalue.h
src/ast/expression/lvalue/arrayElementReference/: arrayElement.c  arrayElement.h
src/ast/expression/lvalue/variableReference/: variableReference.c  variableReference.h
src/ast/expression/rvalue/: rvalue.c  rvalue.h
src/ast/expression/rvalue/binaryOperationResult/: binaryOperationResult.c  binaryOperationResult.h
src/ast/expression/rvalue/doubleLiteral/: doubleLiteral.c  doubleLiteral.h
src/ast/expression/rvalue/intLiteral/: intLiteral.c  intLiteral.h
src/ast/statement/: assign.rs  compound.rs  declare.rs  function_call.rs  if_statement.rs  mod.rs  return_statement.rs  statement.h  while_statement.rs
src/ast/statement/assign/: assign.c  assign.h
src/ast/statement/compound/: compound.c  compound.h
src/ast/statement/declare/: declare.c  declare.h
src/ast/statement/declare/function/: function.c  function.h
src/ast/statement/declare/variable/: variable.c  variable.h
src/ast/statement/if/: if.c  if.h
src/ast/statement/print/: print.c  print.h
src/ast/statement/return/: return.c  return.h
src/ast/statement/while/: while.c  while.h
src/backend/riscv/: mod.rs  rvalue.rs
src/backend/riscv/statement/: assign.rs  declare.rs  function_call.rs  if_statement.rs  mod.rs  return_statement.rs  while_statement.rs
src/code/: mod.rs
src/code/expression/: bin_op.rs  constant.rs  lvalue.rs  mod.rs  rvalue.rs  variable.rs
src/code/statement/: assign.rs  compound.rs  if_statement.rs  mod.rs
src/code_generator/: add.rs  load_address.rs  load_instant.rs  load_variable.rs  mod.rs  store.rs
src/code_generator/register/: abstract_register.rs  assign.rs  mod.rs  physical_register.rs
src/ir/: alloca.rs  basic_block.rs  branch.rs  calculate.rs  function.rs  global.rs  global_definition.rs  integer_literal.rs  jump.rs  label.rs  load.rs  mod.rs  phi.rs  register.rs  store.rs  struct_literal.rs  symbol_table.rs  test.ir  type_definition.rs  visitor.rs
src/ir/function/: declare.rs  mod.rs  while_statement.rs
src/ir/statements/: alloca.rs  branch.rs  calculate.rs  call.rs  jump.rs  load.rs  load_field.rs  mod.rs  phi.rs  ret.rs  set_field.rs  store.rs
src/ir/utils/: global.rs  local.rs  mod.rs
src/parser/: context.rs  mod.rs  test.toy
src/parser/context/: mod.rs  symbol_table.rs
src/parser/expression/: bin_op.rs  constant.rs  lvalue.rs  mod.rs  number_literal.rs  parenthesis.rs  result.rs  rvalue.rs  variable.rs  variable_ref.rs  variable_reference.rs
src/parser/expression/bin_op/: level10.rs  level3.rs  level4.rs  level5.rs  level6.rs  level7.rs  level8.rs  level9.rs  mod.rs
src/parser/expression/binary_op/: add.rs  div.rs  mod.rs  mul.rs  rem.rs  sub.rs
src/parser/statement/: assign.rs  assignment.rs  compound.rs  declare.rs  if_statement.rs  mod.rs  variable_declaration.rs
src/register/: assign.rs  mod.rs
src/riscv/: data_type.rs  mod.rs  register.rs  test.ir
src/riscv/ir_translator/: alloca.rs  branch.rs  calculate.rs  jump.rs  load.rs  mod.rs  store.rs
src/shared/: data_type.rs  mod.rs  parse.rs  parsing.rs
src/ssa/: bin_op.rs  branch.rs  label.rs  load_address.rs  load_instant.rs  load_variable.rs  mod.rs  store.rs
src/symbolTable/: symbolTable.c  symbolTable.h
src/symbolTable/symbol/: symbol.c  symbol.h
src/symbolTable/symbol/array/: array.c  array.h
src/symbolTable/symbol/function/: function.c  function.h
src/symbolTable/symbol/function/paramList/: paramList.c  paramList.h
src/symbolTable/symbol/type/: symbolTable.c  symbolType.h
src/symbol_table/: frame.rs  mod.rs  symbol.rs  table.rs
src/tools/: id_generator.rs  tools.c  tools.h
src/util/: lift.rs  mod.rs  sequence.rs
src/utility/: data_type.rs
tests/basic/: basic.toylang
