[package]
name = "toylang"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
sum_type = "0.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.8.13"
paste = "1.0.1"

[[bin]]
name = "backend-riscv"
path = "src/riscv/main.rs"
